Added groups for each consulate

--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
     </header>
     <div class="container">
         <div class="row">
-            <div class='informacion hidden'>
+            <div class="informacion hidden">
                 <p id="pais"></p>
                 <p id="consulado"></p>
                 <p><span id="censo"></span> españoles</p>
             </div>
-            <div id='map'></div>
+            <div id="map"></div>
+            <div id="changeByTime"></div>
         </div>
     </div>
     <footer>
@@ -43,6 +44,7 @@
     <script src="app/map/projection.js"></script>
     <script src="app/parseData.js"></script>
     <script src="app/map/map.js"></script>
+    <script src="app/lineChart/smallMultiple.js"></script>
     <script src="app/app.js"></script>
 </body>
 </html>
