Added textual data

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
       <div class="row visuals-consulate">
         <div class="consulate-map">
           <div id="map-jurisdiction" class="row"></div>
-          <p id="jurisdiction">Jurisdiction:<span id="states"></span></p>
+          <p>Jurisdiction: <span id="jurisdiction"></span></p>
         </div>
         <div class="information">
           <div class="quote-wrapper">
-            <p id="quote"></p>
+            <p class="quote">"<span id="quote"></span>"</p>
             <p id="author"></p>
           </div>
           <div class="data">
@@ -82,6 +82,7 @@
     <script src="app/map/projection.js"></script>
     <script src="app/parseData.js"></script>
     <script src="app/controls/controls.js"></script>
+    <script src="app/consulate-info/consulate-info.js"></script>
     <script src="app/map/map.js"></script>
     <script src="app/lineChart/lineChart.js"></script>
     <script src="app/lineChart/smallMultiple.js"></script>
