updated logic to create chart

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <p class="chart-title">
                 CERA registrations by consulate and year
               </p>
-              <div id="plot"></div>
+              <div id="plotConsulate"></div>
             </div>
           </div>
         </div>
