Added show/hide controls of map when using the dropdown

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           aria-label="Default"
         ></select>
       </div>
-      <div id="map" class="row"></div>
+      <div id="map-nation" class="row"></div>
       <div class="row visuals-consulate">
         <div class="consulate-map">
           <div id="map-jurisdiction" class="row"></div>
