Control show/hide behaviour

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         ></select>
       </div>
       <div id="map-nation" class="row"></div>
-      <div class="row visuals-consulate">
+      <div id="visuals-consulate" class="row visuals-consulate hide">
         <div class="consulate-map">
           <div id="map-jurisdiction" class="row"></div>
           <p>Jurisdiction: <span id="jurisdiction"></span></p>
