Changed position of a p element
Added a legend, it's not the final position

--- a/index.html
+++ b/index.html
@@ -39,13 +39,16 @@
           aria-label="Default"
         ></select>
       </div>
+      <div class="row legend-container">
+        <p class="legend"><span class="dot">⬤</span>10 Spaniards</p>
+      </div>
       <div id="map-nation" class="row"></div>
       <div id="visuals-consulate" class="row visuals-consulate hide">
         <div class="consulate-map">
           <div id="map-jurisdiction" class="row"></div>
-          <p>Jurisdiction: <span id="jurisdiction"></span></p>
         </div>
         <div class="information">
+          <p>Jurisdiction: <span id="jurisdiction"></span></p>
           <!-- start of carousel -->
           <div
             id="carouselQuotes"
