Changed legend design and modified scale and translate options

--- a/index.html
+++ b/index.html
@@ -31,17 +31,20 @@
       </p>
     </header>
     <div class="container-fluid graphics-wrapper">
-      <div class="dropdown">
-        <label>Choose a jurisdiction</label>
-        <select
-          id="consulates-list"
-          class="form-select"
-          aria-label="Default"
-        ></select>
+      <div class="information-row">
+        <div class="dropdown">
+          <label>Choose a jurisdiction</label>
+          <select
+            id="consulates-list"
+            class="form-select"
+            aria-label="Default"
+          ></select>
+        </div>
+        <div class="legend-container">
+          <p class="legend"><span class="dot">⬤</span>10 Spaniards</p>
+        </div>
       </div>
-      <div class="row legend-container">
-        <p class="legend"><span class="dot">⬤</span>10 Spaniards</p>
-      </div>
+
       <div id="map-nation" class="row"></div>
       <div id="visuals-consulate" class="row visuals-consulate hide">
         <div class="consulate-map">
