Added some tweaks

--- a/index.html
+++ b/index.html
@@ -30,8 +30,21 @@
         A snapshot of where Spaniards study, work, or form a family abroad
       </p>
     </header>
+    <div class="copy">
+      <p>
+        Spanish nationals that live outside Spain for more than a year are asked
+        by the Government to register in a General Consulate. If they are of
+        voting age, they become part of the Electoral Census of Spaniards
+        Residing Abroad (CERA). Although it is up to the person to do so, the
+        CERA dataset, incomplete and changing in nature, provides a snapshot of
+        where Spaniards study, work, or form a family abroad.
+      </p>
+    </div>
     <div class="container-fluid graphics-wrapper">
       <div class="information-row">
+        <div class="legend-container">
+          <p class="legend"><span class="dot">⬤</span>10 Spaniards</p>
+        </div>
         <div class="dropdown">
           <label>Choose a jurisdiction</label>
           <select
@@ -39,9 +52,6 @@
             class="form-select"
             aria-label="Default"
           ></select>
-        </div>
-        <div class="legend-container">
-          <p class="legend"><span class="dot">⬤</span>10 Spaniards</p>
         </div>
       </div>
 
