Did a few modifications to the layout

--- a/index.html
+++ b/index.html
@@ -57,12 +57,8 @@
 
       <div id="map-nation" class="row"></div>
       <div id="visuals-consulate" class="row visuals-consulate hide">
-        <div class="consulate-map">
-          <div id="map-jurisdiction" class="row"></div>
-        </div>
         <div class="information">
-          <p>Jurisdiction: <span id="jurisdiction"></span></p>
-          <!-- start of carousel -->
+                    <!-- start of carousel -->
           <div
             id="carouselQuotes"
             class="quote-wrapper carousel slide"
@@ -73,6 +69,23 @@
             <!-- ol = number of quotes -->
             <div class="carousel-indicators"></div>
           </div>
+
+          <p class="white">
+            Spain has
+            <span class="icon">
+              <img src="assets/imgs/dot-consulate.svg"></img>
+              </span>
+            <span class="highlight-consulate">nine general consulates</span>
+            in the US, each covering
+            <span class="highlight-consulate">different jurisdictions</span>.
+            The CERA data only
+            indicates which consulate Spanish citizens registered in, but not
+            where they specifically live. We can assume people cluster around the
+            consulates, often located in big cities and home to universities and
+            technology hubs that attract researchers, professionals, and students
+            alike.
+          </p>
+
           <div class="data">
             <h2>
               <span id="number"></span> Spaniards registered in
@@ -87,6 +100,12 @@
               <div id="plotConsulate"></div>
             </div>
           </div>
+
+        </div>
+        <div class="consulate-map">
+          <p>Jurisdiction: <span id="jurisdiction"></span></p>
+          <div id="map-jurisdiction" class="row"></div>
+          
         </div>
       </div>
     </div>
