--- a/index.html
+++ b/index.html
@@ -105,6 +105,61 @@
           <div id="map-jurisdiction" class="row"></div>
         </div>
       </div>
+      
+      <div class="copy about">
+        <p>
+          When Spaniards discuss migration, they typically view it from the
+          perspective of Spain being the destination. However, Spaniards can
+          also be immigrants: whether they experienced exile decades ago or
+          pursued better job opportunities abroad to navigate financial crises.
+          Even today, many continue to travel to broaden their professional and
+          personal horizons. They are the fortunate ones who choose to 
+          live an adventure beyond their homeland.
+        </p>
+        <!-- <div class="graphics">
+          <div class="graphic-summary">
+            <h2>The number of Spaniards living abroad has doubled in 20 years...</h2>
+            <p class="legend">CERA registrations by country and year</p>
+            <div id="spaniards-living-abroad"></div>
+          </div>
+          
+          <div class="graphic-summary">
+            <h2>
+              ...since 2003, the number of Spanish nationals registered in 
+              US Consulates has increased by 330 per cent
+            </h2>
+            <p class="legend">CERA registrations by country and year</p>
+            <div id="spaniards-living-us"></div>
+          </div>
+        </div> -->
+        <p>I never thought I would be an immigrant myself. But in 2015, I 
+          became one when I relocated to Boston to pursue a Master of 
+          Fine Arts. Seeking to understand my experience, I became 
+          fascinated by the Electoral Census of Spaniards Residing Abroad 
+          (CERA), where Spanish nationals must register if they plan to 
+          live outside Spain for more than a year. Suddenly, I became a number.
+        </p>
+        <p>
+          Migration is a multifaceted experience, offering both freedom and 
+          loneliness. It provides an opportunity for reinvention, away 
+          from the constraints of familiarity. It is a time of discovery, 
+          not only for oneself but also for those who become part of the 
+          journey: friends, family, or colleagues, among many others. 
+          Together, we navigate the nuances of what we miss from home, 
+          what remains unchanged, and what is better in our new home. 
+          Migration is not a binary experience—it exists in shades of gray.
+        </p>
+        <p>
+          To provide a wider representation of this view, I reached out 
+          to fellow Spaniards who currently live or have lived across different
+          parts of the United States. I asked them about what they missed from 
+          Spain and their newfound joys. This infographic delves into the 
+          complexities of Spanish migration in the United States: from the 
+          cold statistical data to the challenges and achievements of those who 
+          embark on the journey of seeing how their culture intersects with another.
+        </p>
+
+      </div>
     </div>
     <footer></footer>
 
