changed something on the footer

--- a/index.html
+++ b/index.html
@@ -206,6 +206,10 @@
         that explored the intricate relationship between Spain and the U.S. 
         through the work of twelve Spanish infographists.
       </p>
+      <p>Website done by 
+        <a href="https://irenedelatorrearenas.wordpress.com/" 
+        aria-label="Go to Irene de la Torre's website">Irene de la Torre Arenas</a>
+      </p>
     </footer>
 
     <!-- bootstrap -->
