Added some metadata

--- a/index.html
+++ b/index.html
@@ -6,15 +6,25 @@
     <meta title="Where do Spaniards live in the US?">
     <meta name="twitter:title" content="Where do Spaniards live in the US?">
     <meta property="og:title" content="Where do Spaniards live in the US?">
-    <meta name="description" content="
-        Spanish nationals that live outside Spain for more than a year are 
-        asked by the Government to register in a General Consulate. If they 
-        are of voting age, they become part of the Electoral Census of Spaniards
-        Residing Abroad (CERA). Although it is up to the person to do so, the
-        CERA dataset, incomplete and changing in nature, provides a snapshot of
-        where Spaniards study, work, or form a family abroad.">
+    <meta property="og:title" content="Where do Spaniards live in the US?">
+    <meta name="description" 
+      content="
+        A snapshot of where Spaniards study, work, or form a family abroad">
+    <meta 
+      name="twitter:description" 
+      content=
+        "A snapshot of where Spaniards study, work, or form a family abroad">
+    <meta 
+      property="og:description" 
+      content=
+        "A snapshot of where Spaniards study, work, or form a family abroad">
     <meta name="author" content="Irene de la Torre Arenas" />
-
+    <link rel="image_src" href="assets/imgs/master.png">
+    <meta name="twitter:image" content="assets/imgs/master.png">
+    <meta property="og:image" content="assets/imgs/master.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://irenedelatorre.github.io/Spaniards-in-the-US/">
+    <meta property="og:url" content="https://irenedelatorre.github.io/Spaniards-in-the-US/">
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=yes"
