trying to get the img to the twitter card

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       content=
         "A snapshot of where Spaniards study, work, or form a family abroad">
     <meta name="author" content="Irene de la Torre Arenas" />
-    <link rel="image_src" href="assets/imgs/master.png">
-    <meta name="twitter:image" content="assets/imgs/master.png">
-    <meta property="og:image" content="assets/imgs/master.png">
+    <link rel="image_src" href="https://irenedelatorre.github.io/Spaniards-in-the-US/assets/imgs/master.png">
+    <meta name="twitter:image" content="https://irenedelatorre.github.io/Spaniards-in-the-US/assets/imgs/master.png">
+    <meta property="og:image" content="https://irenedelatorre.github.io/Spaniards-in-the-US/assets/imgs/master.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://irenedelatorre.github.io/Spaniards-in-the-US/">
     <meta property="og:url" content="https://irenedelatorre.github.io/Spaniards-in-the-US/">
