--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="twitter:title" content="Where do Spaniards live in the US?">
     <meta property="og:title" content="Where do Spaniards live in the US?">
     <meta property="og:title" content="Where do Spaniards live in the US?">
+    <meta property="og:type" content="article" />
+    <meta name="keywords" content="data visualization, migration, Spain">
     <meta name="description" 
       content="
         A snapshot of where Spaniards study, work, or form a family abroad">
